Adding Css and correcting index

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="nav-menu">
+      <div class="nav-menu"> 
         <div class="logo">
-          <img src="./svg/logo.svg" alt="logo Spider-man" onload="SVGInject(this)">
+          <img src="./src/svg/logo.svg" alt="logo Spider-man" onload="SVGInject(this)">
         </div>
         <ul class="nav-list">
           <li>
@@ -32,18 +32,17 @@
         </ul>
       </div>
       <div class="nav-social">
-        <img src="./svg/facebook.svg" alt="logo facebook" onload="SVGInject(this)" />
-        <img src="./svg/instagram.svg" alt="logo instagram" onload="SVGInject(this)" />
-        <img src="./svg/youtube.svg" alt="logo instagram" onload="SVGInject(this)" />
-        <img src="./svg/twiter.svg" alt="logo twiter" onload="SVGInject(this)" />
+        <img src="./src/svg/facebook.svg" alt="logo facebook" onload="SVGInject(this)" />
+        <img src="./src/svg/instagram.svg" alt="logo instagram" onload="SVGInject(this)" />
+        <img src="./src/svg/youtube.svg" alt="logo youtube" onload="SVGInject(this)" />
       </div>
     </nav>
   </header>
   
-  <section class="container">
+  <section class="container"> 
     <div class="container-item-1">
       <p>
-        <img src="./img/miles.png" alt="Spider man text">
+        <img src="./src/img/miles.png" alt="Spider man text">
       </p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Iaculis velit magna vitae mauris orci fames posuere
@@ -54,18 +53,18 @@
       <div>
         <a href="/" class="btn">Pre-order now</a>
         <a href="/" class="btn-secondary">Watch the teaser</a>
-      </div>
+      </div> 
 
       <div>
-        <img src="./svg/ps.svg" alt="logo ps" onload="SVGInject(this)" />
-        <img src="./svg/marvel.svg" alt="logo marvel" onload="SVGInject(this)" />
+        <img src="./src/svg/ps.svg" alt="logo ps" onload="SVGInject(this)" />
+        <img src="./src/svg/marvel.svg" alt="logo marvel" onload="SVGInject(this)" />
       </div>
     </div>
     <div class="container-item-2">
-      <img src="./img/miles-spider.png"  class="spiderman" alt="Spider-man miles morales">
+      <img src="./src/img/miles-spider.png"  class="spiderman" alt="Spider-man miles morales">
     </div>
   </section>
-
+ 
 </body>
 
 </html> 
